baseline_initial_4766295.err
conda version 24.1.2 python 3.11.7 loaded.
  File "/geode2/home/u060/mealieff/BigRed200/hsd-gab/main.py", line 12
    'max_iter': [1000, 5000, 10000],s
                                    ^
SyntaxError: ':' expected after dictionary key
